language/move-lang/tests/move_check/typing/return_type_explicit_exp_invalid.exp
error[E04007]: incompatible types
  ┌─ tests/move_check/typing/return_type_explicit_exp_invalid.move:5:9
  │
4 │     fun t0(): u64 {
  │               --- Expected: 'u64'
5 │         return ()
  │         ^^^^^^^^^
  │         │      │
  │         │      Given: '()'
  │         Invalid return

error[E04007]: incompatible types
  ┌─ tests/move_check/typing/return_type_explicit_exp_invalid.move:9:19
  │
8 │     fun t1(): () {
  │               -- Expected: '()'
9 │         if (true) return 1 else return 0
  │                   ^^^^^^^^
  │                   │      │
  │                   │      Given: integer
  │                   Invalid return

error[E04007]: incompatible types
  ┌─ tests/move_check/typing/return_type_explicit_exp_invalid.move:9:33
  │
8 │     fun t1(): () {
  │               -- Expected: '()'
9 │         if (true) return 1 else return 0
  │                                 ^^^^^^^^
  │                                 │      │
  │                                 │      Given: integer
  │                                 Invalid return

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/return_type_explicit_exp_invalid.move:13:14
   │
12 │     fun t2(): (u64, bool) {
   │               ----------- Expected expression list of length 2: '(u64, bool)'
13 │         loop return (0, false, R{});
   │              ^^^^^^^^^^^^^^^^^^^^^^
   │              │      │
   │              │      Given expression list of length 3: '({integer}, bool, 0x8675309::M::R)'
   │              Invalid return

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/return_type_explicit_exp_invalid.move:18:22
   │
17 │     fun t3(): (u64, bool, R, bool) {
   │               -------------------- Expected expression list of length 4: '(u64, bool, 0x8675309::M::R, bool)'
18 │         while (true) return (0, false, R{});
   │                      ^^^^^^^^^^^^^^^^^^^^^^
   │                      │      │
   │                      │      Given expression list of length 3: '({integer}, bool, 0x8675309::M::R)'
   │                      Invalid return

error[E04007]: incompatible types
   ┌─ tests/move_check/typing/return_type_explicit_exp_invalid.move:23:23
   │
22 │     fun t4(): (bool, u64, R) {
   │                ---- Expected: 'bool'
23 │         while (false) return (0, false, R{});
   │                       ^^^^^^^^^^^^^^^^^^^^^^
   │                       │       │
   │                       │       Given: integer
   │                       Invalid return

